--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -5,7 +5,7 @@ form label {
   display: none;
 }
 </style>
-<div class="p-4 md:ml-64">
+<div class="p-4 md:ml-64 h-screen">
   <!-- Breadcrumb -->
   <nav class="flex mt-12 py-4" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
@@ -23,7 +23,25 @@ form label {
       </li>
     </ol>
   </nav>
-  <div class="grid grid-cols-4 py-4 rounded-lg h-full">
+  <div class="grid grid-cols-4 py-4 rounded-lg gap-5 " style="height:90%">
+    <!--Orders Section-->
+    <div class=" bg-gray-800 rounded-bl-lg overflow-y-auto h-full rounded-tl-xl">
+      <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0 rounded-tl-lg">
+        <p class="text-lg border-b"> Orders List </p>
+      </div>
+      <div class="pt-2">
+        {% include 'editor/tables/orders_table.html' %}
+      </div>
+    </div>
+
+    <!--Orders Details Section-->
+    <div class="col-span-3 h-full bg-gray-800 rounded-r-lg">
+      <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0 rounded-tr-lg">
+        <p class="text-lg border-b"> Orders Detail </p>
+      </div>
+      <div id="order_details_section" style="height: 94%">
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
