--- a/templates/cashier/forms/order_info.html
+++ b/templates/cashier/forms/order_info.html
@@ -6,5 +6,6 @@ class="border text-sm rounded-lg block w-28 p-2.5 bg-gray-700 border-gray-600
 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
 placeholder="Order ID" value="{{ order_id }}"
 _="on load set #table_order_id.value to my.value
-  then set #payment_order_id.value to my.value"
+  then set #payment_order_id.value to my.value
+  then set #folder_order_id.value to my.value"
 readOnly />
