--- a/templates/editor/tables/orders_table.html
+++ b/templates/editor/tables/orders_table.html
@@ -20,6 +20,7 @@
       </td>
       <td class="px-3 py-3">
         <a 
+          href="{% url 'serve_order_file' order.order.id %}"
           class="cursor-pointer ">
           <i class="fa-solid fa-folder-open text-yellow-400 hover:text-yellow-600"></i>
         </a>
