--- a/templates/editor/tables/orders_table.html
+++ b/templates/editor/tables/orders_table.html
@@ -9,12 +9,12 @@
     {% for order in order_list %}
     <tr
       class="text-lg odd:bg-gray-900 even:bg-gray-800">
-      <td class="px-3 py-3 hover:text-white hover:font-bold cursor-pointer">
+      <td class="p-0 hover:text-white hover:font-bold cursor-pointer">
         <a 
           hx-get="{% url 'editor_order_details' order.order.id %}"
           hx-target="#order_details_section"
           hx-swap="innerHTML"
-          class="cursor-pointer ">
+          class="cursor-pointer h-full w-full px-3 py-3">
           {{ order.order.id }}
         </a>
       </td>
