--- a/templates/settings/cashier/tables/order_table.html
+++ b/templates/settings/cashier/tables/order_table.html
@@ -9,6 +9,7 @@
       <th scope="col" class="px-6 py-3">paid</th>
       <th scope="col" class="px-6 py-3">Remaining</th>
       <th scope="col" class="px-6 py-3">Payment Method</th>
+      <th scope="col" class="px-6 py-3">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +29,13 @@
       <td class="px-6 py-4 text-base" x-text="paid">{{ order.paid }}</td>
       <td class="px-6 py-4 text-base" x-text="(total-((total*discount)/100))-paid"></td>
       <td class="px-6 py-4 text-base">{{ order.get_payment_method_display }}</td>
+      <td class="px-3 py-3">
+        <a 
+          href="{% url 'serve_order_file' order.order.id %}"
+          class="cursor-pointer ">
+          <i class="fa-solid fa-folder-open text-yellow-400 hover:text-yellow-600"></i>
+        </a>
+      </td>
     </tr>
     {% endfor %}
   </tbody>
