--- a/templates/settings/cashier/tables/customer_table.html
+++ b/templates/settings/cashier/tables/customer_table.html
@@ -6,7 +6,9 @@
       <th scope="col" class="px-6 py-3">Name Two</th>
       <th scope="col" class="px-6 py-3">Phone</th>
       <th scope="col" class="px-6 py-3">Whatsapp</th>
+      {% if perms.orders.change_order %}
       <th scope="col" class="px-6 py-3">Action</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody>
@@ -21,6 +23,7 @@
           <i class="fa-brands fa-whatsapp text-lg text-green-500 mr-2"></i>  {{ customer.whatsapp }}
         </a>
         </td>
+      {% if perms.orders.change_order %}
       <td class="px-6 py-4 text-base">
         <div class="flex gap-5">
           <a 
@@ -39,6 +42,7 @@
           </a>
         </div>
       </td>
+      {% endif %}
     </tr>
     {% endfor %}
   </tbody>
