--- a/templates/editor/editor.html
+++ b/templates/editor/editor.html
@@ -23,7 +23,7 @@ form label {
       </li>
     </ol>
   </nav>
-  <div class="grid grid-cols-4 py-4 rounded-lg gap-5 " style="height:90%">
+  <div class="grid grid-cols-4 py-4 rounded-lg gap-5 " style="height:85dvh">
     <!--Orders Section-->
     <div class=" bg-gray-800 rounded-bl-lg overflow-y-auto h-full rounded-tl-xl">
       <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0 rounded-tl-lg">
@@ -39,7 +39,7 @@ form label {
       <div class="bg-gray-700 flex justify-center text-gray-300 p-2 sticky top-0 rounded-tr-lg">
         <p class="text-lg border-b"> Orders Detail </p>
       </div>
-      <div id="order_details_section" style="height: 94%">
+      <div id="order_details_section" style="height: 78dvh">
       </div>
     </div>
   </div>
