--- a/templates/cashier/forms/customer_info.html
+++ b/templates/cashier/forms/customer_info.html
@@ -50,7 +50,7 @@
     </button>
     {% endif %}
     <button
-      hx-get="{% url "create_customer" %}"
+      hx-get="{% url 'create_customer' %}"
       hx-target="#modal_form"
       hx-swap="innerHtml"
       _="on click remove .hidden from modal_div " 
@@ -60,11 +60,11 @@
       New
     </button>
     <button
-      hx-get="{% url "clear_customer_info" %}"
+      hx-get="{% url 'clear_customer_info' %}"
       hx-target="#customer"
       hx-swap="innerHtml"
-      hx-trigger="click, clear from:body"
-      _="on click reset() the #customer_id_form"
+      hx-trigger="click"
+      _="on click set #customer_order_id.value to '' then reset() the #order_id_form"
       class="block text-white focus:ring-4 focus:outline-none
        font-medium rounded-lg text-sm w-24 h-9 px-5 py-2.5 text-center bg-gray-600
       hover:bg-gray-700 focus:ring-gray-800 my-3" type="button">
