--- a/templates/cashier/home.html
+++ b/templates/cashier/home.html
@@ -92,6 +92,7 @@ form label {
             id="new_order_id"
             _="on change or keyup wait 100ms set #table_order_id.value to my.value
             then set #payment_order_id.value to my.value
+            then wait 100ms then trigger change on #payment_order_id
             then set #folder_order_id.value to my.value
             then set #customer_order_id.value to my.value
             then wait 100ms then trigger change on #customer_order_id"
@@ -153,47 +154,7 @@ form label {
           </div>
 
           <!--Order Details Payment-->
-          <form id="payment_form" class="row-span-2 h-full" action="{% url 'order_payment' %}" method="post">
-            {% csrf_token %}
-            <div class=" flex justify-between items-center bg-gray-800 h-full px-5">
-              <div class="flex justify-center items-center px-5 gap-10">
-                <input  type="hidden" name="order_id" id="payment_order_id">
-                <div class="text-center text-white">
-                  <p class="block mb-5 text-base font-medium text-gray-400">Befor Discount</p>
-                  {{ payment_form.total }}
-                </div>
-                <div class="text-center">
-                  <label for="payment_discount" class="block mb-5 text-base font-medium text-gray-400">Discount %</label>
-                  {{ payment_form.discount }}
-                </div>
-                <div class="text-center text-white">
-                  <p class="block mb-5 text-base font-medium text-gray-400">After Discount</p>
-                  <input
-                  class="border-none bg-gray-800 text-center text-white w-20 px-0"
-                  type="text" id="after_discount" value='0.0' readonly />
-                </div>
-              </div>
-
-              <div class="flex justify-center items-center px-5 gap-10">
-                <div class="text-center">
-                  <label for="id_payment_method" class="block mb-5 text-base font-medium text-gray-400">Payment</label>
-                  {{ payment_form.payment_method }}
-                </div>
-                <div class="text-center">
-                  <label for="paid" class="block mb-5 text-base font-medium text-gray-400">Paid</label>
-                  {{ payment_form.paid }}
-                </div>
-                <div class="text-center">
-                  <label for="remaining" class="block mb-5 text-base font-medium text-gray-400">Remaining</label>
-                  <input type="number" aria-describedby="helper-text-explanation" id="remaining" 
-                  class="border-none text-base text-red-500 text-center rounded-lg block w-24 p-2 bg-gray-800 
-                  placeholder-gray-400"
-                  placeholder="0.0" readonly />
-                </div>
-              </div>
-            </div>
-            <button type="submit" class="hidden">Submit Payment</button>
-          </form>
+          {% include 'cashier/forms/create_payment_form.html' %}
 
           <!--Order Details buttons-->
           <div class="row-span-1 flex justify-between items-center bg-gray-800 h-full px-5 rounded-br-lg">
