--- a/templates/cashier/forms/update_payment_form.html
+++ b/templates/cashier/forms/update_payment_form.html
@@ -7,7 +7,7 @@
         hx-trigger="change"
         hx-target="#payment_form"
         hx-swap="outerHTML"
-        type="hidden" name="order_id" id="payment_order_id">
+        type="hidden" name="payment_order_id" id="payment_order_id">
       <div class="text-center text-white">
         <p class="block mb-5 text-base font-medium text-gray-400">Befor Discount</p>
         {{ payment_form.total }}
