update the order_details

--- a/templates/cashier/forms/create_payment_form.html
+++ b/templates/cashier/forms/create_payment_form.html
@@ -8,6 +8,7 @@
         hx-target="#payment_form"
         hx-swap="outerHTML"
         type="hidden" name="payment_order_id" id="payment_order_id">
+      <input type="hidden" name="payment_id" value="">
       <div class="text-center text-white">
         <p class="block mb-5 text-base font-medium text-gray-400">Befor Discount</p>
         {{ payment_form.total }}
