--- a/templates/cashier/tables/order_detail_row.html
+++ b/templates/cashier/tables/order_detail_row.html
@@ -1,6 +1,7 @@
 <tr class="bg-gray-900 text-xs border-t border-gray-500" 
   x-data="{ price: {{ product_line.normal_price }}, fawryPrice: {{ product_line.fawry_price }} , normalPrice: {{ product_line.normal_price }} }">
   <input type="hidden" name="product_line_id" value="{{ pk }}">
+  <input type="hidden" name="order_detail_id" value="">
   <td
     _="on click toggle .hidden on the next <tr/>"
     class="px-2 py-4 text-base hover:text-white cursor-pointer">
@@ -37,7 +38,7 @@
       </button>
     </div>
   </td> <!--amount-->
-  <td class="px-2 py-4 text-base total-price" :id="$id('total-price')", >{{ product_line.normal_price }}</td>
+  <td class="px-2 py-4 text-base total-price" :id="$id('total-price')" >{{ product_line.normal_price }}</td>
   <td class="px-2 py-4 text-base">
     {{ form.deliver_type }}
   </td>
