starting with the printing feature

--- a/templates/base.html
+++ b/templates/base.html
@@ -128,6 +128,9 @@
     <script src="{% static 'js/flowbite.min.js' %}"></script>
     <script src="{% static 'js/mask.min.js' %}"></script>
     <script src="{% static 'js/alpine.min.js' %}"></script>
+    <script src="{% static 'js/html2canvas.min.js' %}"></script>
+    <script src="{% static 'js/jspdf.umd.min.js' %}"></script>
+
 
     <script>
         document.body.addEventListener('htmx:configRequest', (event) => {
